--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -4,5 +4,6 @@
 @import "modules/pages/shop";
 @import "modules/pages/product";
 @import "modules/pages/cart";
+@import "modules/pages/contacts";
 
 @import "modules/footer/footer";
