--- a/src/views/pages/shop.html
+++ b/src/views/pages/shop.html
@@ -316,8 +316,12 @@
                 <li><a href="">
                         <span class="text">Farben</span>
                     </a></li>
-                <li class="active"><a href="">
+                <li class=""><a href="">
                         <span class="text">Innenfarben</span>
+                    </a></li>
+                <li class="active"><a href="">
+                        <span
+                            class="text">InnenfarbenInnenfarbenInnenfarbenInnenfarbenInnenfarbenInnenfarbenInnenfarben</span>
                     </a></li>
             </ul>
         </nav>
@@ -520,68 +524,71 @@
                 </form>
             </div>
             <div class="main__content-left woof_sid_auto_shortcode">
+                <div class="woof_redraw_zone">
+                    <div data-css-class="woof_container_product_tag"
+                        class="woof_container woof_container_checkbox woof_container_product_tag woof_container_2 woof_container_tags">
+                        <div class="woof_container_overlay_item"></div>
+                        <div class="woof_container_inner woof_container_inner_tags">
+                            <h4>
+                                TAGS <a href="javascript: void(0);" title="toggle"
+                                    class="woof_front_toggle woof_front_toggle_opened" data-condition="opened">-</a>
+                            </h4>
+                            <div class="woof_block_html_items">
+                                <ul class="woof_list woof_list_checkbox">
+                                    <li class="woof_term_56 ">
+                                        <input type="checkbox" disabled="" id="woof_56_60a36160a2622"
+                                            class="woof_checkbox_term woof_checkbox_term_56" data-tax="product_tag"
+                                            name="tag-1" data-term-id="56" value="56">
+                                        <label class="woof_checkbox_label " for="woof_56_60a36160a2622">Tag 1<span
+                                                class="woof_checkbox_count">(0)</span></label>
+                                        <input type="hidden" value="Tag 1" data-anchor="woof_n_product_tag_tag-1">
 
-                <div data-css-class="woof_container_product_tag"
-                    class="woof_container woof_container_checkbox woof_container_product_tag woof_container_2 woof_container_tags">
-                    <div class="woof_container_overlay_item"></div>
-                    <div class="woof_container_inner woof_container_inner_tags">
-                        <h4>
-                            TAGS <a href="javascript: void(0);" title="toggle"
-                                class="woof_front_toggle woof_front_toggle_opened" data-condition="opened">-</a>
-                        </h4>
-                        <div class="woof_block_html_items">
-                            <ul class="woof_list woof_list_checkbox">
-                                <li class="woof_term_56 ">
-                                    <input type="checkbox" disabled="" id="woof_56_60a36160a2622"
-                                        class="woof_checkbox_term woof_checkbox_term_56" data-tax="product_tag"
-                                        name="tag-1" data-term-id="56" value="56">
-                                    <label class="woof_checkbox_label " for="woof_56_60a36160a2622">Tag 1<span
-                                            class="woof_checkbox_count">(0)</span></label>
-                                    <input type="hidden" value="Tag 1" data-anchor="woof_n_product_tag_tag-1">
+                                    </li>
+                                    <li class="woof_term_57 ">
+                                        <input type="checkbox" disabled="" id="woof_57_60a36160a2639"
+                                            class="woof_checkbox_term woof_checkbox_term_57" data-tax="product_tag"
+                                            name="tag-2" data-term-id="57" value="57">
+                                        <label class="woof_checkbox_label " for="woof_57_60a36160a2639">Tag 2<span
+                                                class="woof_checkbox_count">(0)</span></label>
+                                        <input type="hidden" value="Tag 2" data-anchor="woof_n_product_tag_tag-2">
 
-                                </li>
-                                <li class="woof_term_57 ">
-                                    <input type="checkbox" disabled="" id="woof_57_60a36160a2639"
-                                        class="woof_checkbox_term woof_checkbox_term_57" data-tax="product_tag"
-                                        name="tag-2" data-term-id="57" value="57">
-                                    <label class="woof_checkbox_label " for="woof_57_60a36160a2639">Tag 2<span
-                                            class="woof_checkbox_count">(0)</span></label>
-                                    <input type="hidden" value="Tag 2" data-anchor="woof_n_product_tag_tag-2">
+                                    </li>
+                                    <li class="woof_term_58 ">
+                                        <input type="checkbox" disabled="" id="woof_58_60a36160a2641"
+                                            class="woof_checkbox_term woof_checkbox_term_58" data-tax="product_tag"
+                                            name="tag-3" data-term-id="58" value="58">
+                                        <label class="woof_checkbox_label " for="woof_58_60a36160a2641">Tag 3<span
+                                                class="woof_checkbox_count">(0)</span></label>
+                                        <input type="hidden" value="Tag 3" data-anchor="woof_n_product_tag_tag-3">
 
-                                </li>
-                                <li class="woof_term_58 ">
-                                    <input type="checkbox" disabled="" id="woof_58_60a36160a2641"
-                                        class="woof_checkbox_term woof_checkbox_term_58" data-tax="product_tag"
-                                        name="tag-3" data-term-id="58" value="58">
-                                    <label class="woof_checkbox_label " for="woof_58_60a36160a2641">Tag 3<span
-                                            class="woof_checkbox_count">(0)</span></label>
-                                    <input type="hidden" value="Tag 3" data-anchor="woof_n_product_tag_tag-3">
+                                    </li>
+                                    <li class="woof_term_66 ">
+                                        <input type="checkbox" id="woof_66_60a36160a2649"
+                                            class="woof_checkbox_term woof_checkbox_term_66" data-tax="product_tag"
+                                            name="test" data-term-id="66" value="66">
+                                        <label class="woof_checkbox_label " for="woof_66_60a36160a2649">Test<span
+                                                class="woof_checkbox_count">(1)</span></label>
+                                        <input type="hidden" value="Test" data-anchor="woof_n_product_tag_test">
 
-                                </li>
-                                <li class="woof_term_66 ">
-                                    <input type="checkbox" id="woof_66_60a36160a2649"
-                                        class="woof_checkbox_term woof_checkbox_term_66" data-tax="product_tag"
-                                        name="test" data-term-id="66" value="66">
-                                    <label class="woof_checkbox_label " for="woof_66_60a36160a2649">Test<span
-                                            class="woof_checkbox_count">(1)</span></label>
-                                    <input type="hidden" value="Test" data-anchor="woof_n_product_tag_test">
+                                    </li>
+                                    <li class="woof_term_82 ">
+                                        <input type="checkbox" id="woof_82_60a36160a264f"
+                                            class="woof_checkbox_term woof_checkbox_term_82" data-tax="product_tag"
+                                            name="test-test" data-term-id="82" value="82">
+                                        <label class="woof_checkbox_label " for="woof_82_60a36160a264f">Test-test<span
+                                                class="woof_checkbox_count">(1)</span></label>
+                                        <input type="hidden" value="Test-test"
+                                            data-anchor="woof_n_product_tag_test-test">
 
-                                </li>
-                                <li class="woof_term_82 ">
-                                    <input type="checkbox" id="woof_82_60a36160a264f"
-                                        class="woof_checkbox_term woof_checkbox_term_82" data-tax="product_tag"
-                                        name="test-test" data-term-id="82" value="82">
-                                    <label class="woof_checkbox_label " for="woof_82_60a36160a264f">Test-test<span
-                                            class="woof_checkbox_count">(1)</span></label>
-                                    <input type="hidden" value="Test-test" data-anchor="woof_n_product_tag_test-test">
-
-                                </li>
-                            </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <input type="hidden" name="woof_t_product_tag" value="Produkt Schlagwörter">
                         </div>
-                        <input type="hidden" name="woof_t_product_tag" value="Produkt Schlagwörter">
                     </div>
+                    <button class="button woof_reset_search_form" data-link="">Reset</button>
                 </div>
-                <button class="button woof_reset_search_form" data-link="">Reset</button>
+
             </div>
             <div class="woof_shortcode_output">
                 <ul class="product__items">
