--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -3,6 +3,10 @@
     background-color: $black-color;
     position: relative;
     color: $white-color;
+    @include to($mobile) {
+        background-color: $orange-color;
+        text-align: center;
+    }
     &::before {
         content: "";
         width: 100%;
@@ -12,6 +16,9 @@
         top: 0;
         left: -50%;
         z-index: 0;
+        @include to($mobile) {
+            content: none;
+        }
     }
     & > .container {
         padding-bottom: 40px;
@@ -21,6 +28,10 @@
         flex-wrap: wrap;
         justify-content: space-between;
         font-size: 18px;
+        @include to($mobile) {
+            padding-top: 75px;
+            padding-bottom: 0;
+        }
         &::after {
             content: "";
             width: 20px;
@@ -31,6 +42,9 @@
             transform: translateX(-50%);
             background-color: $dark_red-color;
             z-index: 0;
+            @include to($mobile) {
+                content: none;
+            }
         }
         h3 {
             text-transform: uppercase;
@@ -44,15 +58,59 @@
     &__left {
         width: 100%;
         max-width: 530px;
+        @include from-to($mobile, $laptop) {
+            max-width: 430px;
+        }
+        @include to($mobile) {
+            position: relative;
+            padding-bottom: 30px;
+            &::after {
+                content: "";
+                width: calc(100% + 20px);
+                height: 12px;
+                position: absolute;
+                left: -10px;
+                bottom: 0;
+                background-color: $dark_red-color;
+            }
+        }
     }
     &__right {
         width: 100%;
         max-width: 530px;
         @include flex;
         justify-content: space-between;
+        @include from-to($mobile, $laptop) {
+            max-width: 430px;
+        }
+        @include to($mobile) {
+            background-color: $black-color;
+            position: relative;
+            max-width: 100%;
+            width: calc(100% + 20px);
+            padding-bottom: 20px;
+            &::before,
+            &::after {
+                content: "";
+                background-color: $black-color;
+                top: 0;
+                width: 10px;
+                height: 100%;
+                position: absolute;
+            }
+            &::before {
+                left: -10px;
+            }
+            &::after {
+                right: -10px;
+            }
+        }
         &-adress,
         &-contacts {
             flex: 0 0 50%;
+            @include to($mobile) {
+                display: none;
+            }
         }
         &-pay_method {
             margin-top: 20px;
@@ -63,6 +121,12 @@
             }
             ul {
                 @include flex;
+                @include to($mobile) {
+                    justify-content: center;
+                    width: 100%;
+                    max-width: 80%;
+                    margin: 0 auto;
+                }
             }
         }
     }
@@ -74,6 +138,13 @@
         background-color: $white-color;
         padding: 20px 30px;
         z-index: 1;
+        @include to($mobile) {
+            max-width: 90%;
+            width: 100%;
+            img {
+                width: 100%;
+            }
+        }
     }
     &__signature {
         background-color: $white-color;
@@ -86,9 +157,19 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            @include to($mobile) {
+                flex-wrap: wrap;
+            }
         }
         span {
+            @include to($mobile) {
+                display: inline-block;
+                margin-bottom: 10px;
+                text-align: center;
+                width: 100%;
+            }
             span {
+                display: inline;
                 color: $dark_red-color;
             }
         }
@@ -97,10 +178,20 @@
         }
         ul {
             display: flex;
+            @include to($mobile) {
+                flex-wrap: wrap;
+                justify-content: center;
+                width: 100%;
+                max-width: 80%;
+                margin: 0 auto;
+            }
         }
         li {
             margin-right: 20px;
             position: relative;
+            @include to($mobile) {
+                margin-bottom: 10px;
+            }
             &::after {
                 content: "";
                 height: 100%;
@@ -130,12 +221,34 @@
         left: 50%;
         transform: translateX(-50%);
         bottom: 40px;
+        @include to($mobile) {
+            display: none;
+        }
         &:hover {
             svg {
                 path {
                     fill: rgb(66, 103, 178);
                 }
             }
+        }
+    }
+    .mobile__visible {
+        display: flex;
+        width: 100%;
+        max-width: 80%;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0 auto;
+        margin-top: 25px;
+        li {
+            width: 100%;
+            max-width: 40px;
+            height: 35px;
+        }
+        img,
+        svg {
+            width: 100%;
+            height: 100%;
         }
     }
 }
@@ -278,11 +391,11 @@ nav.woocommerce-breadcrumb {
     }
 }
 
-// .woof_products_top_panel,
-// #woof_results_by_ajax .woocommerce-ordering,
-// .woocommerce-result-count {
-//     display: none !important;
-// }
+.woof_products_top_panel,
+#woof_results_by_ajax .woocommerce-ordering,
+.woocommerce-result-count {
+    display: none !important;
+}
 .woocommerce {
     ul.products {
         &::after,
