--- a/src/blocks/modules/main__content/main__content.scss
+++ b/src/blocks/modules/main__content/main__content.scss
@@ -8,17 +8,22 @@
     padding-top: 15px;
     padding-bottom: 15px;
     color: $grey-color;
+    @include to($mobile) {
+        justify-content: center;
+        margin-top: 30px;
+    }
     ul {
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        @include to($mobile) {
+            justify-content: center;
+        }
     }
     li {
         margin-right: 20px;
         position: relative;
-        &:last-child {
-            margin-right: 0;
-        }
+
         &.active {
             a {
                 font-family: $font-bold;
@@ -33,8 +38,18 @@
             top: 1px;
         }
         &:last-child {
+            margin-right: 0;
             &::after {
                 content: none;
+            }
+            @include to($mobile) {
+                width: 100px;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
+            @include to($mobiles) {
+                width: 70px;
             }
         }
 
@@ -55,6 +70,9 @@
     }
     .head {
         margin-right: 8px;
+        @include to($mobile) {
+            display: none;
+        }
     }
 }
 .main {
@@ -65,6 +83,9 @@
             display: flex;
             flex-direction: column-reverse;
             margin-bottom: 0;
+            .main__header {
+                margin-bottom: 0;
+            }
         }
         &-item {
             position: relative;
@@ -214,31 +235,24 @@
             }
             ul.sub-category {
                 padding-left: 45px;
-                &::after,
-                &::before {
-                    content: "_";
+                &::after {
+                    content: "+";
                     position: absolute;
                     right: 0px;
+                    top: 0;
                     width: 20px;
-                    height: 20px;
+                    height: 100%;
+                    text-align: center;
+                    padding-top: 34px;
                     z-index: 1;
                     cursor: pointer;
                     font-size: 20px;
                     line-height: 0;
-                }
-                &::after {
-                    padding-left: 3px;
-                    top: 22px;
-                }
-                &::before {
-                    top: 26px;
-                    right: 5px;
-                    transform: rotate(90deg);
                     @include transition;
                 }
                 &.active {
-                    &::before {
-                        content: none;
+                    &::after {
+                        content: "-";
                     }
                 }
                 li {
