--- a/src/blocks/modules/pages/cart.scss
+++ b/src/blocks/modules/pages/cart.scss
@@ -15,6 +15,9 @@
         border-radius: 0 !important;
         border: 1px solid $grey_border-color !important;
         padding-left: 20px !important;
+        @include to($mobile) {
+            margin-bottom: 20px !important;
+        }
     }
     button.button {
         background-color: $orange-color !important;
@@ -51,6 +54,19 @@
     .form-row.form-row-first {
         width: 100%;
         max-width: 250px;
+        @include to($mobile) {
+            max-width: 100%;
+            input {
+                max-width: 100% !important;
+            }
+        }
+    }
+    .form-row.form-row-last {
+        @include to($mobile) {
+            button.button {
+                max-width: 100%;
+            }
+        }
     }
     p {
         font-size: 16px;
@@ -93,6 +109,7 @@
     @include to($mobile) {
         width: 100%;
         text-align: center;
+        margin-bottom: 20px !important;
     }
 }
 .woocommerce-cart-form {
@@ -157,4 +174,23 @@ form.checkout {
 .show-password-input {
     top: 5px !important;
     right: 5px !important;
+}
+.woocommerce table.shop_table_responsive tr td::before {
+    float: none !important;
+}
+.woocommerce table.shop_table_responsive tr:nth-child(2n) td,
+.woocommerce-page table.shop_table_responsive tr:nth-child(2n) td {
+    background-color: transparent !important;
+}
+.select2-container--default .select2-selection--single {
+    border: 1px solid #818181;
+    font-size: 1rem;
+    color: rgba(0, 0, 0, 0.6);
+    border-radius: 2px;
+    padding: 0.3em 0 0.5em;
+    height: 39px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 39px;
 }
